--- a/Filosofia_economica_entendiendo_la_complejidad.tex
+++ b/Filosofia_economica_entendiendo_la_complejidad.tex
@@ -306,6 +306,8 @@ Capítulos:
 
 Parte VI Econofísica, entropía, complejidad y sistemas
 
+Capítulos:
+
 \begin{itemize}
 \tightlist
 \item
@@ -315,6 +317,8 @@ Parte VI Econofísica, entropía, complejidad y sistemas
 \end{itemize}
 
 Parte VII Sistemas ecológicos complejos
+
+Capítulos:
 
 \begin{itemize}
 \tightlist
@@ -328,7 +332,7 @@ Parte VII Sistemas ecológicos complejos
 \chapter*{Índice de contenido}\label{uxedndice-de-contenido}}
 \addcontentsline{toc}{chapter}{Índice de contenido}
 
-Capítulo 1. 1 Ideologías y economía política en el siglo XIX
+Capítulo 1. Ideologías y economía política en el siglo XIX
 
 \begin{itemize}
 \tightlist
@@ -423,7 +427,7 @@ Capítulo 5. La filosofía económica desde mi perspectiva
 \item
   Una visión liberal
 \item
-  ¿ Hacia dónde iría ahora un liberal?
+  ¿Hacia dónde iría ahora un liberal?
 \end{itemize}
 
 Capítulo 6. Fundamentos lógicos y filosóficos de la complejidad
@@ -528,7 +532,7 @@ Capítulo 9. Econofísica, entropía y complejidad
   Rompiendo burbujas y la venganza de la entropía metafórica
 \end{itemize}
 
-Capítulo 10. Econofísica y entropía en sistemas urbanos / regionales dinámicamente complejos
+Capítulo 10. Econofísica y entropía en sistemas urbanos/regionales dinámicamente complejos
 
 \begin{itemize}
 \tightlist
@@ -539,11 +543,11 @@ Capítulo 10. Econofísica y entropía en sistemas urbanos / regionales dinámic
 \item
   Variaciones en los modelos de distribución espacial entrópica
 \item
-  Sistemas urbanos / regionales termodinámicamente sostenibles
+  Sistemas urbanos/regionales termodinámicamente sostenibles
 \item
-  Procesos anti-entrópicos en sistemas urbanos / regionales
+  Procesos anti-entrópicos en sistemas urbanos/regionales
 \item
-  Complejidad, entropía y autoorganización de sistemas urbanos / regionales
+  Complejidad, entropía y autoorganización de sistemas urbanos/regionales
 \item
   Observaciones adicionales
 \end{itemize}
@@ -565,14 +569,26 @@ Capítulo 11. Los sistemas ecológico-económicos complejos y sus problemas de g
 \end{itemize}
 
 Capítulo 12. Complejidad y futuro de la economía
-- La evolución de la economía
-- Más sobre la naturaleza de la complejidad
-- ¿Qué es el trabajo de complejidad de vanguardia?
-- Cambios en los métodos de investigación
-- Trabajo de complejidad de vanguardia y macroeconomía moderna
-- La economía de la complejidad y el debate sobre la economía heterodoxa
-- Economía de la complejidad y políticas públicas
-- La paradoja de la economía como sistema adaptativo complejo
+
+\begin{itemize}
+\tightlist
+\item
+  La evolución de la economía
+\item
+  Más sobre la naturaleza de la complejidad
+\item
+  ¿Qué es el trabajo de complejidad de vanguardia?
+\item
+  Cambios en los métodos de investigación
+\item
+  Trabajo de complejidad de vanguardia y macroeconomía moderna
+\item
+  La economía de la complejidad y el debate sobre la economía heterodoxa
+\item
+  Economía de la complejidad y políticas públicas
+\item
+  La paradoja de la economía como sistema adaptativo complejo
+\end{itemize}
 
 Referencias bibliográficas
 
